# ASSETMCP

./: .gitattributes  .gitignore  README.md  assetmcp.mcp.example.json  install.ps1  pyproject.toml  requirements.txt  run_assetmcp.ps1
docs/: EXAMPLE_PROMPTS.md  PROVIDERS.md
flat-world/: ASSET_MANIFEST.json  CREDITS.md  README.md  index.html  main.js  style.css
flat-world/assets/: character-a-game-walk.glb
src/assetmcp/: __init__.py  schemas.py  server.py
src/assetmcp/providers/: __init__.py  builtin.py  core.py  registry.py
src/assetmcp/services/: __init__.py  blender_tools.py  file_scanner.py  license_checker.py  manifest.py  scaffolder.py
tests/: test_license_checker.py  test_manifest_and_credits.py  test_providers_and_scaffold.py  test_safe_archive.py
